[gd_scene load_steps=3 format=3 uid="uid://boogr4e46rd56"]

[ext_resource type="Script" path="res://Scripts/menu_principal.gd" id="1_huftu"]
[ext_resource type="Texture2D" uid="uid://8q1shmw764h5" path="res://Recursos/Imagens/seta.png" id="2_k36qo"]

[node name="Base" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_huftu")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.431309, 0.397371, 0.659686, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -268.0
offset_top = -157.0
offset_right = 292.0
offset_bottom = 337.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Partida"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Button2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Manual"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button3" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Button3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Cartas"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 808.0
offset_bottom = 608.0
scale = Vector2(0.3, 0.3)
icon = ExtResource("2_k36qo")
flat = true

[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
